# giblefs

./: Cargo.toml  README.md
src/: fs.rs  git.rs  inode.rs  main.rs
src/fs/: attr.rs
src/git/: types.rs
