[package]
name = "giblefs"
version = "0.1.0"
authors = ["Zeyi Fan <fanzeyi1994@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fuse = "0.3"
clap = "2.33"
env_logger = "0.7"
anyhow = "1.0"
libc = "0.2"
time = "0.1"
lazy_static = "1.4.0"
log = "0.4.8"
ctrlc = "3.1.4"
